--- a/store/templates/accounts/change_password.html
+++ b/store/templates/accounts/change_password.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+{% block page_content %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/login_register.css' %}">
+        <div class="wrapper">
+            <form class="form-signin" method="POST" action="{% url 'change password' request.user.id %}">
+                <h2 class="form-signin-heading">Change Password</h2>
+                {% csrf_token %}
+                {{ form }}
 
-</body>
-</html>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Change Password</button>
+            </form>
+        </div>
+
+{% endblock %}
