Add About us page

--- a/store/templates/web/home.html
+++ b/store/templates/web/home.html
@@ -9,8 +9,8 @@
             <p class="lead">Buy your shoes from here.</p>
             <hr class="my-4">
             <div class="flex-row">
-
-                <a class="btn btn-outline-danger" href="{% url 'dashboard' %}">Go shop</a>
+                <a class="btn btn-outline-success" href="{% url 'dashboard' %}">Go shop</a>
+                <a class="btn btn-outline-success" href="{% url 'about us' %}">About us</a>
             </div>
         </div>
     </div>
